tests/errors/unexpected-token.sbl
externals (stem)
integers (i)
groupings (g)
define g +
define stem as (
  $
  next
  $(i 0)
  $i = hop 2
  $(i = )
  backwardmode (next)
  $(i = 1)
  $(i /= 1)
  $(i => 1)
  $(i += 1)
  $(i -= 1)
  $(i *= 1)
)
next

strings (s1 s2)
define s1 'string'
define s2 as 'string'
define
